--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Viwarrior.github.io/avinash_code_pen/",
+  "homepage": "https://viwarrior.github.io/avinash_code_pen/",
   "name": "avinash_code_pen",
   "version": "0.1.0",
   "private": true,
